--- a/professorenkatalog-base-webapp/pom.xml
+++ b/professorenkatalog-base-webapp/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mycore</groupId>
   <artifactId>professorenkatalog-base-webapp</artifactId>
@@ -6,7 +7,17 @@
   <version>2013.06.0.2-SNAPSHOT</version>
   <name>Professorenkatalog Base Webapp</name>
   <description>generic code for professorenkatalog</description>
-  <build> 
+  <dependencies>
+    <dependency>
+      <groupId>org.mycore</groupId>
+      <artifactId>jspdocportal-webapp</artifactId>
+      <version>${project.version}</version>
+      <type>jar</type>
+      <classifier>classes</classifier>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -17,5 +28,5 @@
         </configuration>
       </plugin>
     </plugins>
-   </build>
+  </build>
 </project>
