ongoing setup (pom.xml, ...)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28453 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/pom.xml
+++ b/professorenkatalog-base-webapp/pom.xml
@@ -12,9 +12,7 @@
       <groupId>org.mycore</groupId>
       <artifactId>jspdocportal-webapp</artifactId>
       <version>${project.version}</version>
-      <type>jar</type>
-      <classifier>classes</classifier>
-      <scope>provided</scope>
+      <type>war</type>
     </dependency>
   </dependencies>
   <build>
