--- a/profkatsample-webapp/pom.xml
+++ b/profkatsample-webapp/pom.xml
@@ -23,6 +23,7 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+    
     <dependency>
       <groupId>org.mycore</groupId>
       <artifactId>jspdocportal-webapp</artifactId>
@@ -30,4 +31,17 @@
       <type>war</type>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
