--- a/professorenkatalog-base-webapp/pom.xml
+++ b/professorenkatalog-base-webapp/pom.xml
@@ -14,6 +14,21 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+    <dependency>
+      <groupId>org.mycore</groupId>
+      <artifactId>mycore-complete</artifactId>
+      <version>${project.version}</version>
+      <type>jar</type>
+      <optional>false</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <type>jar</type>
+      <scope>provided</scope>
+      <optional>false</optional>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
