move config dir from resources to main dir
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28528 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkatsample-webapp/pom.xml
+++ b/profkatsample-webapp/pom.xml
@@ -49,11 +49,7 @@
           <archiveClasses>true</archiveClasses>
           <webResources>
             <resource>
-              <directory>src/main/resources</directory>
-              <targetPath>WEB-INF/classes</targetPath>
-            </resource>
-            <resource>
-              <directory>src/main/resources/config</directory>
+              <directory>src/main/config</directory>
               <targetPath>WEB-INF/classes</targetPath>
               <includes>
                 <include>*.*</include>
@@ -65,7 +61,7 @@
               </excludes>
             </resource>
             <resource>
-              <directory>src/main/resources/config/lang</directory>
+              <directory>src/main/config/lang</directory>
               <targetPath>WEB-INF/classes</targetPath>
               <includes>
                 <include>*.*</include>
@@ -75,18 +71,18 @@
               </excludes>
             </resource>
             <resource>
-              <directory>src/main/resources/config/lang/webcontent</directory>
+              <directory>src/main/config/lang/webcontent</directory>
               <targetPath>content/webcontent</targetPath>
             </resource>
             <resource>
-              <directory>src/main/resources/config/hibernate</directory>
+              <directory>src/main/config/hibernate</directory>
               <targetPath>WEB-INF/classes</targetPath>
               <excludes>
                 <exclude>*.template</exclude>
               </excludes>
             </resource>
             <resource>
-              <directory>src/main/resources/config/workflow</directory>
+              <directory>src/main/config/workflow</directory>
               <targetPath>WEB-INF/classes/workflow</targetPath>
               <includes>
                 <include>**/*.xml</include>
@@ -100,6 +96,8 @@
               </includes>
             </resource>
           </webResources>
+            <!-- disable overlays -->
+          <dependentWarExcludes>**/*</dependentWarExcludes>
         </configuration>
       </plugin>
       </plugins>
