move config dir from resources to main dir
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28529 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkatsample-webapp/pom.xml
+++ b/profkatsample-webapp/pom.xml
@@ -89,7 +89,7 @@
               </includes>
             </resource>
             <resource>
-              <directory>src/main/resources/config</directory>
+              <directory>src/main/config</directory>
               <targetPath>WEB-INF</targetPath>
               <includes>
                 <include>web.xml</include>
