java code for workflow and messages for web site
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28550 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/pom.xml
+++ b/professorenkatalog-base-webapp/pom.xml
@@ -36,7 +36,7 @@
       <groupId>org.mycore</groupId>
       <artifactId>jspdocportal-webapp</artifactId>
       <version>${project.version}</version>
-      <type>war</type>
+      <classifier>classes</classifier>
     </dependency>
     <dependency>
       <groupId>org.mycore</groupId>
