property for mycore project id
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28571 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkatsample-webapp/src/main/config/mycore.properties
+++ b/profkatsample-webapp/src/main/config/mycore.properties
@@ -22,6 +22,7 @@ MCR.Mail.NumTries=0
 #log4j.logger.net.rk-bloom.logdriver=DEBUG, stdout, R
 
 MCR.NameOfProject=ProfKat
-
+#Project-ID (first part in MyCoRe Object ID)
+MCR.SWF.Project.ID=profkat 
 MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands,org.mycore.services.fieldquery.MCRQueryCommands,org.mycore.frontend.workflowengine.jbpm.MCRJbpmCommands
 
