added some project dependant properties
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28574 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkatsample-webapp/src/main/config/mycore.properties
+++ b/profkatsample-webapp/src/main/config/mycore.properties
@@ -23,6 +23,9 @@ MCR.Mail.NumTries=0
 
 MCR.NameOfProject=ProfKat
 #Project-ID (first part in MyCoRe Object ID)
-MCR.SWF.Project.ID=profkat 
-MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands,org.mycore.services.fieldquery.MCRQueryCommands,org.mycore.frontend.workflowengine.jbpm.MCRJbpmCommands
+MCR.SWF.Project.ID=profkat
 
+MCR.WorkflowEngine.Administrator.Email=pkadmin@beispiel-uni.de
+MCR.WorkflowEngine.professorum.admin=pkadmin@beispiel-uni.de
+MCR.WorkflowEngine.professorum.from=pkadmin@beispiel-uni.de
+MCR.WorkflowEngine.professorum.replyto=pkadmin@beispiel-uni.de
