--- a/professorenkatalog-base-webapp/src/main/config/mycore.properties
+++ b/professorenkatalog-base-webapp/src/main/config/mycore.properties
@@ -1,4 +1,6 @@
 ##### Application specific properties
+MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands,org.mycore.services.fieldquery.MCRQueryCommands,org.mycore.frontend.workflowengine.jbpm.MCRJbpmCommands
+
 #new ContentStore implementation
 MCR.IFS.ContentStore.FS.Class=org.mycore.datamodel.ifs2.MCRCStoreIFS2
 MCR.IFS.ContentStore.FS.BaseDir=%MCR.datadir%/content 
@@ -54,16 +56,9 @@ MCR.IndexBrowser.professorum.Searchfield=profindex
 MCR.IndexBrowser.professorum.Style=person
 MCR.IndexBrowser.professorum.Table=person
 
-MCR.WorkflowEngine.Administrator.Email=robert.stephan@uni-rostock.de
+MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
 MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/export/person
 MCR.WorkflowEngine.ManagerImpl.professorum=org.mycore.frontend.workflowengine.jbpm.professorum.MCRWorkflowManagerProfessorum
-
-MCR.WorkflowEngine.MyInstitution.city=Rostock
-MCR.WorkflowEngine.MyInstitution.name=Universit\u00E4t Rostock
-MCR.WorkflowEngine.MyInstitution.state=Mecklenburg-Vorpommern
-MCR.WorkflowEngine.MyInstitution.street=Universit\u00E4t Rostock
-MCR.WorkflowEngine.MyInstitution.zipcode=18051
-
 MCR.WorkflowEngine.WorkflowTypes=professorum
 
 MCR.WorkflowEngine.defaultACL.derivate.commitdb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
@@ -86,8 +81,8 @@ MCR.WorkflowEngine.professorum.from=unigeschichte@uni-rostock.de
 MCR.WorkflowEngine.professorum.replyto=unigeschichte@uni-rostock.de
 
   
-MCR.NameOfProject=Catalogus Professorum Rostochiensium
-MCR.SWF.Project.ID=cpr
+MCR.NameOfProject=Beispielprofessorenkatalog
+MCR.SWF.Project.ID=pk
 MCR.Metadata.ObjectID.NumberPattern=00000000
 
 log4j.logger.org.apache.catalina=ERROR, stdout, R
