--- a/professorenkatalog-base-webapp/pom.xml
+++ b/professorenkatalog-base-webapp/pom.xml
@@ -1,136 +1,167 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<artifactId>mycore</artifactId>
+		<groupId>org.mycore</groupId>
+		<version>2014.04-SNAPSHOT</version>
+		<relativePath>../mycore/pom.xml</relativePath>
+	</parent>
+	<artifactId>professorenkatalog-base-webapp</artifactId>
+	<packaging>jar</packaging>
+	<name>Professorenkatalog Base Webapp</name>
+	<description>generic code for professorenkatalog</description>
+	<repositories>
+		<repository>
+			<id>JBoss JBPM</id>
+			<!-- <url>http://repository.jboss.org/maven2</url> -->
+			<url>http://repository.jboss.org/nexus/content/groups/public-jboss</url>
+		</repository>
+		<repository>
+			<id>MyCoRe HQ</id>
+			<url>http://artifactory.mycore.de/mycore-releases</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>MyCoRe HQ Snapshots</id>
+			<url>http://artifactory.mycore.de/mycore-snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>org.mycore</groupId>
+			<artifactId>jspdocportal-webapp</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		
+		
+		<dependency>
   <groupId>org.mycore</groupId>
-  <artifactId>professorenkatalog-base-webapp</artifactId>
-  <packaging>war</packaging>
-  <version>2013.06.0.3-SNAPSHOT</version>
-  <name>Professorenkatalog Base Webapp</name>
-  <description>generic code for professorenkatalog</description>
-  <repositories>
-    <repository>
-      <id>JBoss JBPM</id>
-      <!-- <url>http://repository.jboss.org/maven2</url> -->
-      <url>http://repository.jboss.org/nexus/content/groups/public-jboss</url>
-    </repository>
-    <repository>
-      <id>MyCoRe HQ</id>
-      <url>http://artifactory.mycore.de/mycore-releases</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>MyCoRe HQ Snapshots</id>
-      <url>http://artifactory.mycore.de/mycore-snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>org.mycore</groupId>
-      <artifactId>jspdocportal-webapp</artifactId>
-      <version>${project.version}</version>
-      <classifier>classes</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.mycore</groupId>
-      <artifactId>mycore-complete</artifactId>
-      <version>${project.version}</version>
-      <type>jar</type>
-      <optional>false</optional>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-      <type>jar</type>
-      <scope>provided</scope>
-      <optional>false</optional>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.1-beta-1</version>
-        <configuration>
-          <archiveClasses>true</archiveClasses>
-          <webResources>
-           <resource>
-              <directory>src/main/config/lang/webcontent</directory>
-              <targetPath>content/webcontent</targetPath>
-            </resource>
-            <resource>
-              <directory>src/main/config</directory>
-              <targetPath>WEB-INF/classes</targetPath>
-              <includes>
-                <include>*.*</include>
-              </includes>
-              <excludes>
-                <exclude>web.xml</exclude>
-                <exclude>*.template</exclude>
-                <exclude>datamodel-*.xml</exclude>
-              </excludes>
-            </resource>
-            <resource>
-              <directory>src/main/config/lang</directory>
-              <targetPath>WEB-INF/classes</targetPath>
-              <includes>
-                <include>*.*</include>
-              </includes>
-              <excludes>
-                <exclude>*.template</exclude>
-              </excludes>
-            </resource>
-            <resource>
-              <directory>src/main/config/workflow</directory>
-              <targetPath>WEB-INF/classes/workflow</targetPath>
-              <includes>
-                <include>**/*.xml</include>
-              </includes>
-            </resource>
-            <resource>
-              <directory>src/main/config/datamodel</directory>
-              <targetPath>WEB-INF/classes</targetPath>
-              <includes>
-                <include>**/*.xsd</include>
-              </includes>
-            </resource>
-            <resource>
-              <directory>src/main/config</directory>
-              <targetPath>WEB-INF</targetPath>
-              <includes>
-                <include>web.xml</include>
-              </includes>
-            </resource>
-          </webResources>
-          <!-- disable overlays -->
-          <dependentWarExcludes>**/*</dependentWarExcludes>
+  <artifactId>mycore-user2</artifactId>
+  <version>${project.version}</version>
+</dependency>
+<dependency>
+  <groupId>org.mycore</groupId>
+  <artifactId>mycore-base</artifactId>
+  <version>${project.version}</version>
+</dependency>
+<dependency>
+  <groupId>org.jdom</groupId>
+  <artifactId>jdom2</artifactId>
+</dependency>
+<dependency>
+  <groupId>log4j</groupId>
+  <artifactId>log4j</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.hibernate</groupId>
+  <artifactId>hibernate-core</artifactId>
+</dependency>
+<dependency>
+  <groupId>com.google.inject</groupId>
+  <artifactId>guice</artifactId>
+  <version>1.0</version>
+</dependency>
+<dependency>
+  <groupId>commons-fileupload</groupId>
+  <artifactId>commons-fileupload</artifactId>
+</dependency>
+<dependency>
+  <groupId>jboss</groupId>
+  <artifactId>jbpm</artifactId>
+  <version>3.1.1</version>
+</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1-beta-1</version>
+				<configuration>
+					<archiveClasses>true</archiveClasses>
+					<webResources>
+						<resource>
+							<directory>src/main/config/lang/webcontent</directory>
+							<targetPath>content/webcontent</targetPath>
+						</resource>
+						<resource>
+							<directory>src/main/config</directory>
+							<targetPath>WEB-INF/classes</targetPath>
+							<includes>
+								<include>*.*</include>
+							</includes>
+							<excludes>
+								<exclude>web.xml</exclude>
+								<exclude>*.template</exclude>
+								<exclude>datamodel-*.xml</exclude>
+							</excludes>
+						</resource>
+						<resource>
+							<directory>src/main/config/lang</directory>
+							<targetPath>WEB-INF/classes</targetPath>
+							<includes>
+								<include>*.*</include>
+							</includes>
+							<excludes>
+								<exclude>*.template</exclude>
+							</excludes>
+						</resource>
+						<resource>
+							<directory>src/main/config/workflow</directory>
+							<targetPath>WEB-INF/classes/workflow</targetPath>
+							<includes>
+								<include>**/*.xml</include>
+							</includes>
+						</resource>
+						<resource>
+							<directory>src/main/config/datamodel</directory>
+							<targetPath>WEB-INF/classes</targetPath>
+							<includes>
+								<include>**/*.xsd</include>
+							</includes>
+						</resource>
+						<resource>
+							<directory>src/main/config</directory>
+							<targetPath>WEB-INF</targetPath>
+							<includes>
+								<include>web.xml</include>
+							</includes>
+						</resource>
+					</webResources>
+					<!-- disable overlays -->
+					<dependentWarExcludes>**/*</dependentWarExcludes>
 
-        </configuration>
-      </plugin>
-      <plugin>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>xml-maven-plugin</artifactId>
-				<version>1.0</version>
 				<executions>
 					<execution>
-                        <phase>generate-resources</phase>
+						<phase>generate-resources</phase>
 						<goals>
 							<goal>transform</goal>
 						</goals>
@@ -152,43 +183,44 @@
 					</transformationSets>
 				</configuration>
 			</plugin>
-    </plugins>
-    
-    <!-- needed to execute maven-xml-plugin  -->
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.codehaus.mojo
-                    </groupId>
-                    <artifactId>
-                      xml-maven-plugin
-                    </artifactId>
-                    <versionRange>
-                      [1.0,)
-                    </versionRange>
-                    <goals>
-                      <goal>transform</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+		</plugins>
+
+		<!-- needed to execute maven-xml-plugin -->
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											xml-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.0,)
+										</versionRange>
+										<goals>
+											<goal>transform</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
