--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
@@ -1,22 +1,10 @@
 ##### Application specific properties
-MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands,org.mycore.services.fieldquery.MCRQueryCommands,org.mycore.frontend.workflowengine.jbpm.MCRJbpmCommands
+MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands
 
 #new ContentStore implementation
 MCR.IFS.ContentStore.FS.Class=org.mycore.datamodel.ifs2.MCRCStoreIFS2
 MCR.IFS.ContentStore.FS.BaseDir=%MCR.datadir%/content 
 
-##JDBC LOGGING
-! Log timing information about the SQL that is executed.
-#log4j.logger.jdbc.sqltiming=DEBUG,sqltiming
-#log4j.additivity.jdbc.sqltiming=false
-
-! the appender used for the JDBC API layer call logging above, sql timing
-#log4j.appender.sqltiming=org.apache.log4j.FileAppender
-#log4j.appender.sqltiming.File=/var/log/cpr/sqltiming.log
-#log4j.appender.sqltiming.File=C:/temp/sqltiming.log#
-#log4j.appender.sqltiming.Append=false
-#log4j.appender.sqltiming.layout=org.apache.log4j.PatternLayout
-#log4j.appender.sqltiming.layout.ConversionPattern=-----> %d{yyyy-MM-dd HH:mm:ss.SSS} %m%n%n
 
 MCR.Searcher.lucene-metadata.Index=metadata
 
@@ -56,6 +44,7 @@ MCR.IndexBrowser.professorum.Searchfield=profindex
 MCR.IndexBrowser.professorum.Style=person
 MCR.IndexBrowser.professorum.Table=person
 
+MCR
 MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
 MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/export/person
 MCR.WorkflowEngine.ManagerImpl.professorum=org.mycore.frontend.workflowengine.jbpm.professorum.MCRWorkflowManagerProfessorum
