--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/mycore.properties
@@ -89,13 +89,20 @@ log4j.logger.org.mycore.datamodel.classifications=ERROR, stdout, R
 MCR.Metadata.Type.person=true
 MCR.Metadata.Config.person=datamodel-person.xml
 
+##############################################################################
+#
+# Workflow User / Group Assignment
+#
+##############################################################################
+MCR.Activiti.TaskAssignment.CandidateGroups.create_object_simple.cpr_person=editprofessorum
+MCR.Activiti.WorkflowMgr.class.create_object_simple.default_person=org.mycore.activiti.workflows.create_object_simple.person.MCRWorkflowMgrPerson
 
 ##############################################################################
 # Startlink
 # last item in key should map to a group ID
 # value = a url                                                               
 ##############################################################################
-MCR.Application.Login.StartLink.editprofessorum=nav?path=admin.admin.professorum.professorum
+MCR.Application.Login.StartLink.editprofessorum=showWorkspace.action?projectID=%MCR.SWF.Project.ID%&objectType=person
 
 
 # MyCoRe types for indexing objects, document is default
